--- a/tasks/user/python.yml
+++ b/tasks/user/python.yml
@@ -38,6 +38,7 @@
       - pre-commit<3.0.0,>=2.4.0
       - psutil>=4.0.0
       - six
+      - shtab
       - termcolor<2.0.0,>=1.1.0
       - tldr
     state: latest
