all: add 1Password app

--- a/tasks/system/debian/repositories.yml
+++ b/tasks/system/debian/repositories.yml
@@ -1,4 +1,15 @@
 ---
+- name: Debian - Add 1Password signing key
+  apt_key:
+    url: https://onepassword.s3.amazonaws.com/linux/keys/1password.asc
+    state: present
+
+- name: Debian - Add 1Password Repo
+  apt_repository:
+    repo: "deb [arch=amd64] https://onepassword.s3.amazonaws.com/linux/debian edge main"
+    filename: 1password
+    state: present
+
 - name: Debian - Add VSCode signing key
   shell:
     cmd: |
