debian: add fonts-symbola

--- a/tasks/system/debian/packages.yml
+++ b/tasks/system/debian/packages.yml
@@ -18,6 +18,7 @@
     - docker-ce
     - docker-ce-cli
     - flatpak
+    - fonts-symbola
     - htop
     - libcairo2-dev
     - libglib2.0-bin # gsettings
