--- a/tasks/user/ides.yml
+++ b/tasks/user/ides.yml
@@ -39,3 +39,4 @@
     - ms-azuretools.vscode-docker
     - ms-python.python
     - ms-vscode.vscode-typescript-tslint-plugin
+    - timonwong.shellcheck
