--- a/tasks/system/containers.yml
+++ b/tasks/system/containers.yml
@@ -16,12 +16,6 @@
     dest: /usr/local/bin/docker-compose-{{ docker_compose_version }}
     mode: '0755'
 
-- name: All - Enable execue for docker-compose
-  tags: [ docker ]
-  file:
-    path: /usr/local/bin/docker-compose-{{ docker_compose_version }}
-    mode: +rx
-
 - name: All - Update link to latest docker-compose
   tags: [ docker ]
   file:
@@ -29,6 +23,13 @@
     dest: /usr/local/bin/docker-compose
     state: hard
     force: yes
+
+- name: All - Enable execue for docker-compose
+  tags: [ docker ]
+  file:
+    src: /usr/local/bin/docker-compose-{{ docker_compose_version }}
+    dest: /usr/local/bin/docker-compose
+    mode: +rx
 
 - name: All - add user to docker group, use zsh
   tags: [ docker ]
