--- a/tasks/system/debian/ubuntu/packages.yml
+++ b/tasks/system/debian/ubuntu/packages.yml
@@ -10,6 +10,7 @@
 - name: Ubuntu >=20 - Install packages
   apt:
     pkg:
+      - fd-find
       - python3-cairo
       - python3-launchpadlib
       - python3-testresources
