--- a/tasks/user/applications.yml
+++ b/tasks/user/applications.yml
@@ -1,11 +1,11 @@
 ---
-- name: All - Git update pyenv
+- name: All - Git update pyenv # noqa 401
   diff: false
   git:
     repo: https://github.com/pyenv/pyenv.git
     dest: ~/Applications/pyenv
 
-- name: All - Git update pyenv plugins
+- name: All - Git update pyenv plugins # noqa 401
   diff: false
   git:
     repo: "{{ item.repo }}"
@@ -18,35 +18,39 @@
     - repo: https://github.com/pyenv/pyenv-virtualenv.git
       name: pyenv-virtualenv
 
-- name: All - Git update rbenv
+- name: All - Git update rbenv # noqa 401
   diff: false
   git:
     repo: https://github.com/rbenv/rbenv.git
     dest: ~/Applications/rbenv
+  register: git_rbenv
 
-- name: All - Git update rbenv - ruby build
+- name: All - Git update rbenv - ruby build # noqa 401
   diff: false
   git:
     repo: https://github.com/rbenv/ruby-build.git
     dest: ~/Applications/rbenv/plugins/ruby-build
+  register: git_ruby_build
 
 - name: All - Configure rbenv
   command:
     chdir: ~/Applications/rbenv
     cmd: src/configure
+  when: git_rbenv is changed or git_ruby_build is changed
 
 - name: All - Make rbenv
   command:
     chdir: ~/Applications/rbenv
     cmd: make -C src
+  when: git_rbenv is changed or git_ruby_build is changed
 
-- name: All - Git update tfenv
+- name: All - Git update tfenv # noqa 401
   diff: false
   git:
     repo: https://github.com/tfutils/tfenv.git
     dest: ~/Applications/tfenv
 
-- name: All - Git update tools
+- name: All - Git update tools # noqa 401
   diff: false
   git:
     repo: https://gitlab.com/perobertson/cli-tools.git
