--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,11 @@ variables:
   # https://bixense.com/clicolors/ standard for enabling colours in CI
   CLICOLOR: "1"
 
+stages:
+  - lint
+  - build
+  - deploy
+
 .build:
   interruptible: true
   stage: build
@@ -33,6 +38,13 @@ variables:
 .setup_ubuntu:
   before_script:
     - ./.gitlab/setup_ubuntu.sh
+
+.rules_lint: &rules_lint
+  rules:
+    ### Always
+    - if: $CI_COMMIT_TAG
+    - if: $CI_COMMIT_BRANCH
+    - if: $CI_MERGE_REQUEST_IID
 
 .rules_common_files: &rules_common_files
   - .gitlab-ci.yml
@@ -85,14 +97,27 @@ variables:
       - tasks/system/redhat/**/*
       - tasks/user/redhat/**/*
 
-lint:
+lint:shellcheck:
+  extends:
+    - .rules_lint
   interruptible: true
-  stage: build
+  stage: lint
   image: koalaman/shellcheck-alpine
   tags:
     - docker
   script:
     - shellcheck --external-sources setup.sh $(find . -name '*.sh' -path '**/latest/**')
+
+lint:ansible:
+  extends:
+    - .rules_lint
+  interruptible: true
+  stage: lint
+  image:
+    name: cytopia/ansible-lint:latest
+    entrypoint: ["/bin/sh", "-c"]
+  script:
+    - ansible-lint -p setup.yml systemd.yml
 
 archlinux:
   extends:
