--- a/tasks/system/security.yml
+++ b/tasks/system/security.yml
@@ -4,6 +4,7 @@
   copy:
     src: files/etc/dnf/automatic.conf
     dest: /etc/dnf/automatic.conf
+    mode: '0644'
   when: ansible_os_family == 'RedHat'
 
 - name: RedHat - Configure security updates file permissions
