--- a/tasks/user/flatpaks.yml
+++ b/tasks/user/flatpaks.yml
@@ -8,14 +8,16 @@
 
 - name: All - Create user systemd config directory
   file:
-    path: ~/.config/systemd/user
+    path: $HOME/.config/systemd/user
     state: directory
+    mode: '0755'
 
 - name: All - Add flatpak auto updates
   diff: true
   copy:
     src: files/home/user/.config/systemd/user/{{ item }}
-    dest: ~/.config/systemd/user/{{ item }}
+    dest: $HOME/.config/systemd/user/{{ item }}
+    mode: '0644'
   loop:
     - flatpak-update.service
     - flatpak-update.timer
