--- a/tasks/user/ides.yml
+++ b/tasks/user/ides.yml
@@ -1,26 +1,28 @@
 ---
 - name: All - Sublime Create packages directory
   file:
-    path: ~/.config/sublime-text-3/Installed Packages
+    path: $HOME/.config/sublime-text-3/Installed Packages
     state: directory
+    mode: '0700'
 
 - name: All - Sublime Create user packages directory
   file:
-    path: ~/.config/sublime-text-3/Packages/User
+    path: $HOME/.config/sublime-text-3/Packages/User
     state: directory
+    mode: '0700'
 
 - name: All - Sublime check if package control exists
   stat:
-    path: ~/.config/sublime-text-3/Installed Packages/Package Control.sublime-package
+    path: $HOME/.config/sublime-text-3/Installed Packages/Package Control.sublime-package
   register: sublime_package_control
 
 - name: All - Sublime download package control
   get_url:
     url: https://packagecontrol.io/Package%20Control.sublime-package
-    dest: ~/.config/sublime-text-3/Installed Packages/Package Control.sublime-package
+    dest: $HOME/.config/sublime-text-3/Installed Packages/Package Control.sublime-package
   when: not sublime_package_control.stat.exists
 
-- name: All - VSCode installed extensions
+- name: All - VSCode installed extensions # noqa 301
   command: code --list-extensions
   register: vscode_extensions
 
