--- a/tasks/system/redhat/packages.yml
+++ b/tasks/system/redhat/packages.yml
@@ -77,6 +77,7 @@
     - redhat-rpm-config
     - samba-client
     - seahorse # key management
+    - setools-console
     - sqlite-devel
     - sublime-merge
     - sublime-text
