--- a/tasks/user/ides.yml
+++ b/tasks/user/ides.yml
@@ -39,4 +39,5 @@
     - ms-azuretools.vscode-docker
     - ms-python.python
     - ms-vscode.vscode-typescript-tslint-plugin
+    - rust-lang.rust
     - timonwong.shellcheck
