--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,45 +17,47 @@
     - su public --command='/usr/bin/curl -sSL https://gitlab.com/perobertson/scripts/raw/${CI_COMMIT_SHA}/setup.sh | bash'
     - su public --command='git status --short && test "$(git status --short)" = ""'
     - su public --command='cd "$HOME/Applications/dotfiles" && git status --short && test "$(git status --short)" = ""'
+    # debug
+    - su -l public --command="echo $PATH"
     # List installed tools
-    - bash -l -c "tools"
+    - su -l public --command="tools"
     # Now check the versions
-    - bash -l -c "ansible --version"
-    - bash -l -c "bash --version"
-    - bash -l -c "cargo --version"
-    - bash -l -c "cargo-clippy --version"
-    - bash -l -c "code --version"
-    - bash -l -c "curl --version"
-    - bash -l -c "docker --version"
-    - bash -l -c "docker-compose --version"
-    - bash -l -c "fd --version || echo 'fd unavailable'"
-    - bash -l -c "flameshot --version"
-    - bash -l -c "flatpak --version"
-    - bash -l -c "gcc --version"
-    - bash -l -c "git --version"
-    - bash -l -c "gitui || echo 'gitui unavailable'"
-    - bash -l -c "gzip --version"
-    - bash -l -c "jq --version"
-    - bash -l -c "keybase --version"
-    - bash -l -c "make --version"
-    - bash -l -c "node --version"
-    - bash -l -c "npm --version"
-    - bash -l -c "pip --version"
-    - bash -l -c "python --version"
-    - bash -l -c "python3 --version"
-    - bash -l -c "rust-gdb --version"
-    - bash -l -c "rustc --version"
-    - bash -l -c "rustdoc --version"
-    - bash -l -c "rustfmt --version"
-    - bash -l -c "rustup --version"
-    - bash -l -c "shellcheck --version"
-    - bash -l -c "ssh -V"
-    - bash -l -c "tree --version"
-    - bash -l -c "wget --version"
-    - bash -l -c "xz --version"
-    - bash -l -c "zsh --version"
+    - su -l public --command="ansible --version"
+    - su -l public --command="bash --version"
+    - su -l public --command="cargo --version"
+    - su -l public --command="cargo-clippy --version"
+    - su -l public --command="code --version"
+    - su -l public --command="curl --version"
+    - su -l public --command="docker --version"
+    - su -l public --command="docker-compose --version"
+    - su -l public --command="fd --version || echo 'fd unavailable'"
+    - su -l public --command="flameshot --version"
+    - su -l public --command="flatpak --version"
+    - su -l public --command="gcc --version"
+    - su -l public --command="git --version"
+    - su -l public --command="gitui || echo 'gitui unavailable'"
+    - su -l public --command="gzip --version"
+    - su -l public --command="jq --version"
+    - su -l public --command="keybase --version"
+    - su -l public --command="make --version"
+    - su -l public --command="node --version"
+    - su -l public --command="npm --version"
+    - su -l public --command="pip --version"
+    - su -l public --command="python --version"
+    - su -l public --command="python3 --version"
+    - su -l public --command="rust-gdb --version"
+    - su -l public --command="rustc --version"
+    - su -l public --command="rustdoc --version"
+    - su -l public --command="rustfmt --version"
+    - su -l public --command="rustup --version"
+    - su -l public --command="shellcheck --version"
+    - su -l public --command="ssh -V"
+    - su -l public --command="tree --version"
+    - su -l public --command="wget --version"
+    - su -l public --command="xz --version"
+    - su -l public --command="zsh --version"
     # These commands do not have a version option
-    - bash -l -c "command -v gitk"
+    - su -l public --command="command -v gitk"
 
 .setup_archlinux:
   before_script:
