debian: add shellcheck

--- a/tasks/system/debian/packages.yml
+++ b/tasks/system/debian/packages.yml
@@ -29,6 +29,7 @@
     - pkg-config
     - python3-dbus
     - seahorse # key management
+    - shellcheck
     - sqlitebrowser
     - sublime-merge
     - sublime-text
