debian: add tree

--- a/tasks/system/debian/packages.yml
+++ b/tasks/system/debian/packages.yml
@@ -34,6 +34,7 @@
     - sublime-merge
     - sublime-text
     - sysstat # iostat
+    - tree
     - zsh
 
 - name: Debian - Install remote packages
