--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,16 +22,7 @@
 
 .setup_archlinux:
   before_script:
-    - whoami
-    - echo "$HOME"
-    - pwd
-    - ls -laH
-    - pacman -Syu --noconfirm
-    - pacman -S --noconfirm sudo
-    - "echo '%wheel  ALL=(ALL) NOPASSWD: ALL' > /etc/sudoers.d/ci"
-    - useradd --user-group --create-home --groups=wheel --shell=/bin/bash public
-    - cat /etc/passwd
-    - cat /etc/group
+    - ./.gitlab/setup_archlinux.sh
 
 .setup_fedora:
   before_script:
