--- a/tasks/system/redhat/fedora/packages.yml
+++ b/tasks/system/redhat/fedora/packages.yml
@@ -80,5 +80,6 @@
   dnf:
     name:
       - gitui
+      - libxcrypt-compat # docker-compose needs libcrypt.so.1 provided by this package
     state: present
   when: ansible_distribution_major_version|int >= 32
