all: add alacritty terminal emulator

--- a/tasks/user/rust.yml
+++ b/tasks/user/rust.yml
@@ -23,3 +23,6 @@
   make:
     chdir: ${HOME}/Applications/cli-tools
     target: install
+
+- name: All - Install Alacritty terminal emulator
+  command: ${HOME}/.cargo/bin/cargo install alacritty
