--- a/tasks/system/redhat/fedora/packages.yml
+++ b/tasks/system/redhat/fedora/packages.yml
@@ -76,6 +76,13 @@
     append: true
   when: ansible_distribution_major_version|int >= 30
 
+- name: Fedora >=31 - Install packages
+  dnf:
+    name:
+      - git-delta
+    state: present
+  when: ansible_distribution_major_version|int >= 31
+
 - name: Fedora >=32 - Install packages
   dnf:
     name:
