--- a/tasks/system/redhat/centos/repositories.yml
+++ b/tasks/system/redhat/centos/repositories.yml
@@ -1,13 +1,18 @@
 ---
+- name: CentOS - Check for Docker support
+  uri:
+    url: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/{{ ansible_distribution_major_version|int }}/{{ ansible_architecture }}/stable"
+  register: uri_docker_repo
+  ignore_errors: True
+
 - name: CentOS - Add Docker repository
   tags: [ docker ]
   yum_repository:
     file: docker-ce
     name: docker-ce-stable
-    description: "Docker CE Stable - $basearch"
-    # Hardcoded to 7 until they decide to support the new release
-    baseurl: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/7/$basearch/stable"
-    enabled: yes
+    description: "Docker CE Stable - {{ ansible_distribution }} - $releasever - $basearch"
+    baseurl: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/$releasever/$basearch/stable"
+    enabled: "{{ uri_docker_repo is succeeded }}"
     gpgcheck: yes
     gpgkey: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/gpg"
     repo_gpgcheck: yes
