--- a/tasks/system/redhat/fedora/repositories.yml
+++ b/tasks/system/redhat/fedora/repositories.yml
@@ -103,4 +103,8 @@
     name: docker-ce-stable
     description: "Docker CE Stable - {{ ansible_distribution }} - 31 - $basearch"
     baseurl: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/31/$basearch/stable"
+    enabled: yes
+    gpgcheck: yes
+    gpgkey: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/gpg"
+    repo_gpgcheck: yes
   when: ansible_distribution_major_version|int == 32
