--- a/tasks/system/redhat/fedora/repositories.yml
+++ b/tasks/system/redhat/fedora/repositories.yml
@@ -1,4 +1,24 @@
 ---
+- name: Fedora - Update release info and signing keys # noqa 403
+  dnf:
+    name:
+      - fedora-gpg-keys
+      - fedora-release
+      - fedora-repos
+    state: latest
+
+- name: Fedora - Import RPM-GPG-KEY-rpmfusion-free
+  rpm_key:
+    state: present
+    key: "{{ signing_keys.rpmfusion_free_fedora[ansible_distribution_major_version].key }}"
+    fingerprint: "{{ signing_keys.rpmfusion_free_fedora[ansible_distribution_major_version].fingerprint }}"
+
+- name: Fedora - Import RPM-GPG-KEY-rpmfusion-nonfree
+  rpm_key:
+    state: present
+    key: "{{ signing_keys.rpmfusion_nonfree_fedora[ansible_distribution_major_version].key }}"
+    fingerprint: "{{ signing_keys.rpmfusion_nonfree_fedora[ansible_distribution_major_version].fingerprint }}"
+
 - name: Fedora - check if rpmfusion-free.repo file exists
   stat:
     path: /etc/yum.repos.d/rpmfusion-free.repo
