--- a/tasks/system/redhat/fedora/repositories.yml
+++ b/tasks/system/redhat/fedora/repositories.yml
@@ -11,6 +11,12 @@
     key: "{{ signing_keys.rpmfusion_nonfree_fedora[ansible_distribution_major_version].key }}"
     fingerprint: "{{ signing_keys.rpmfusion_nonfree_fedora[ansible_distribution_major_version].fingerprint }}"
 
+- name: Fedora - Import Zoom signing key
+  rpm_key:
+    state: present
+    key: https://zoom.us/linux/download/pubkey
+    fingerprint: 396060CADD8A75220BFCB369B903BF1861A7C71D
+
 - name: Fedora - check if rpmfusion-free.repo file exists
   stat:
     path: /etc/yum.repos.d/rpmfusion-free.repo
