--- a/tasks/system/redhat/repositories.yml
+++ b/tasks/system/redhat/repositories.yml
@@ -4,6 +4,12 @@
     name:
       - dnf-plugins-core
 
+- name: Fedora - Import 1Password signing key
+  rpm_key:
+    state: present
+    key: https://onepassword.s3.amazonaws.com/linux/keys/1password.asc
+    fingerprint: 3FEF9748469ADBE15DA7CA80AC2D62742012EA22
+
 - name: RedHat - Add 1Password repository
   yum_repository:
     file: 1Password
