--- a/config/ansible.cfg
+++ b/config/ansible.cfg
@@ -11,7 +11,7 @@
 # documentation: https://docs.ansible.com/ansible/latest/reference_appendices/config.html.
 
 [defaults]
-#inventory       = /etc/ansible/hosts
+inventory       = ./inventory.yml
 #library         = ~/.ansible/plugins/modules:/usr/share/ansible/plugins/modules
 #module_utils    = ~/.ansible/plugins/module_utils:/usr/share/ansible/plugins/module_utils
 #remote_tmp      = ~/.ansible/tmp
@@ -168,20 +168,20 @@
 # Jinja2 variables that are not set in templates or action lines. Uncomment this line
 # to change this behavior.
 #
-#error_on_undefined_vars = False
+error_on_undefined_vars = True
 
 # Ansible may display warnings based on the configuration of the
 # system running ansible itself. This may include warnings about 3rd party packages or
 # other conditions that should be resolved if possible.
 # To disable these warnings, set the following value to False:
 #
-#system_warnings = True
+system_warnings = True
 
 # Ansible may display deprecation warnings for language
 # features that should no longer be used and will be removed in future versions.
 # To disable these warnings, set the following value to False:
 #
-#deprecation_warnings = True
+deprecation_warnings = True
 
 # Ansible can optionally warn when usage of the shell and
 # command module appear to be simplified by using a default Ansible module
@@ -190,7 +190,7 @@
 # parameter string. This will for example suggest using the git module
 # instead of shelling out to the git command.
 #
-#command_warnings = False
+command_warnings = True
 
 
 # set plugin path directories here, separate with colons
