--- a/setup.yml
+++ b/setup.yml
@@ -1,6 +1,8 @@
 ---
 - hosts: localhost
   vars:
+    ansible_connection: local
+    ansible_python_interpreter: "{{ ansible_playbook_python }}"
     dive_version: 0.9.2
     docker_compose_version: 1.26.2
     signing_keys:
