--- a/systemd.yml
+++ b/systemd.yml
@@ -1,5 +1,8 @@
 ---
 - hosts: localhost
+  vars:
+    ansible_connection: local
+    ansible_python_interpreter: "{{ ansible_playbook_python }}"
   tasks:
     - name: RedHat - Enable flatpak updates
       systemd:
