--- a/tasks/system/redhat/centos/repositories.yml
+++ b/tasks/system/redhat/centos/repositories.yml
@@ -1,4 +1,16 @@
 ---
+- name: CentOS - Import RPM-GPG-KEY-EPEL
+  rpm_key:
+    state: present
+    key: "{{ signing_keys.epel[ansible_distribution_major_version].key }}"
+    fingerprint: "{{ signing_keys.epel[ansible_distribution_major_version].fingerprint }}"
+
+- name: CentOS - Install EPEL repository
+  dnf:
+    name:
+      - https://dl.fedoraproject.org/pub/epel/epel-release-latest-{{ ansible_distribution_major_version|int }}.noarch.rpm
+    state: present
+
 - name: CentOS - Add epel repository
   yum_repository:
     file: epel
