centos: install epel and rpmfusion from rpms

--- a/tasks/system/redhat/repositories.yml
+++ b/tasks/system/redhat/repositories.yml
@@ -99,6 +99,26 @@
     gpgkey: https://packages.microsoft.com/keys/microsoft.asc
     repo_gpgcheck: yes
 
+- name: RedHat - check if rpmfusion-free.repo file exists
+  stat:
+    path: /etc/yum.repos.d/rpmfusion-free.repo
+  register: rpmfusion_free_repo
+
+- name: RedHat - check if rpmfusion-free-updates.repo file exists
+  stat:
+    path: /etc/yum.repos.d/rpmfusion-free-updates.repo
+  register: rpmfusion_free_updates_repo
+
+- name: RedHat - check if rpmfusion-nonfree.repo file exists
+  stat:
+    path: /etc/yum.repos.d/rpmfusion-nonfree.repo
+  register: rpmfusion_nonfree_repo
+
+- name: RedHat - check if rpmfusion-nonfree-updates.repo file exists
+  stat:
+    path: /etc/yum.repos.d/rpmfusion-nonfree-updates.repo
+  register: rpmfusion_nonfree_updates_repo
+
 ### --- Distro specific ---
 
 - name: CentOS Repositories
