--- a/tasks/system/redhat/centos/repositories.yml
+++ b/tasks/system/redhat/centos/repositories.yml
@@ -5,55 +5,23 @@
     key: "{{ signing_keys.epel[ansible_distribution_major_version].key }}"
     fingerprint: "{{ signing_keys.epel[ansible_distribution_major_version].fingerprint }}"
 
+- name: CentOS - Import RPM-GPG-KEY-rpmfusion-free
+  rpm_key:
+    state: present
+    key: "{{ signing_keys.rpmfusion_free_el[ansible_distribution_major_version].key }}"
+    fingerprint: "{{ signing_keys.rpmfusion_free_el[ansible_distribution_major_version].fingerprint }}"
+
+- name: CentOS - Import RPM-GPG-KEY-rpmfusion-nonfree
+  rpm_key:
+    state: present
+    key: "{{ signing_keys.rpmfusion_nonfree_el[ansible_distribution_major_version].key }}"
+    fingerprint: "{{ signing_keys.rpmfusion_nonfree_el[ansible_distribution_major_version].fingerprint }}"
+
 - name: CentOS - Install EPEL repository
   dnf:
     name:
       - https://dl.fedoraproject.org/pub/epel/epel-release-latest-{{ ansible_distribution_major_version|int }}.noarch.rpm
     state: present
-
-- name: CentOS - Add epel repository
-  yum_repository:
-    file: epel
-    name: epel
-    description: Extra Packages for Enterprise Linux $releasever - $basearch
-    # baseurl=https://download.fedoraproject.org/pub/epel/$releasever/Everything/$basearch
-    metalink: https://mirrors.fedoraproject.org/metalink?repo=epel-$releasever&arch=$basearch&infra=$infra&content=$contentdir
-    enabled: yes
-    gpgcheck: yes
-    gpgkey: file:///etc/pki/rpm-gpg/RPM-GPG-KEY-EPEL-$releasever
-
-- name: CentOS - Add epel-modular repository
-  yum_repository:
-    file: epel-modular
-    name: epel-modular
-    description: Extra Packages for Enterprise Linux Modular $releasever - $basearch
-    # baseurl: https://download.fedoraproject.org/pub/epel/$releasever/Modular/$basearch
-    metalink: https://mirrors.fedoraproject.org/metalink?repo=epel-modular-$releasever&arch=$basearch&infra=$infra&content=$contentdir
-    enabled: yes
-    gpgcheck: yes
-    gpgkey: file:///etc/pki/rpm-gpg/RPM-GPG-KEY-EPEL-$releasever
-
-- name: CentOS - Add rpmfusion-free-updates repository
-  yum_repository:
-    file: rpmfusion-free-updates
-    name: rpmfusion-free-updates
-    description: RPM Fusion for EL $releasever - Free - Updates
-    # baseurl: http://download1.rpmfusion.org/free/el/updates/$releasever/$basearch/
-    mirrorlist: http://mirrors.rpmfusion.org/mirrorlist?repo=free-el-updates-released-$releasever&arch=$basearch
-    enabled: yes
-    gpgcheck: yes
-    gpgkey: file:///etc/pki/rpm-gpg/RPM-GPG-KEY-rpmfusion-free-el-$releasever
-
-- name: CentOS - Add rpmfusion-nonfree-updates
-  yum_repository:
-    file: rpmfusion-nonfree-updates
-    name: rpmfusion-nonfree-updates
-    description: RPM Fusion for EL $releasever - Nonfree - Updates
-    # baseurl: http://download1.rpmfusion.org/nonfree/el/updates/$releasever/$basearch/
-    mirrorlist: http://mirrors.rpmfusion.org/mirrorlist?repo=nonfree-el-updates-released-$releasever&arch=$basearch
-    enabled: yes
-    gpgcheck: yes
-    gpgkey: file:///etc/pki/rpm-gpg/RPM-GPG-KEY-rpmfusion-nonfree-el-$releasever
 
 - name: CentOS - Add PowerTools repository
   yum_repository:
@@ -65,3 +33,27 @@
     gpgcheck: yes
     enabled: yes
     gpgkey: file:///etc/pki/rpm-gpg/RPM-GPG-KEY-centosofficial
+
+- name: CentOS - Add RPMFusion-free repository
+  dnf:
+    name:
+      - https://download1.rpmfusion.org/free/el/rpmfusion-free-release-{{ ansible_distribution_major_version|int }}.noarch.rpm
+    state: present
+  when: (not rpmfusion_free_repo.stat.exists) or
+        (not rpmfusion_free_updates_repo.stat.exists)
+  register: rpmfusion_free_install
+  until: rpmfusion_free_install is succeeded
+  retries: 5
+  delay: 5
+
+- name: CentOS - Add RPMFusion-nonfree repository
+  dnf:
+    name:
+      - https://download1.rpmfusion.org/nonfree/el/rpmfusion-nonfree-release-{{ ansible_distribution_major_version|int }}.noarch.rpm
+    state: present
+  when: (not rpmfusion_nonfree_repo.stat.exists) or
+        (not rpmfusion_nonfree_updates_repo.stat.exists)
+  register: rpmfusion_nonfree_install
+  until: rpmfusion_nonfree_install is succeeded
+  retries: 5
+  delay: 5
