--- a/tasks/system/redhat/repositories.yml
+++ b/tasks/system/redhat/repositories.yml
@@ -10,6 +10,12 @@
     key: https://onepassword.s3.amazonaws.com/linux/keys/1password.asc
     fingerprint: 3FEF9748469ADBE15DA7CA80AC2D62742012EA22
 
+- name: RedHat - Import Zoom signing key
+  rpm_key:
+    state: present
+    key: https://zoom.us/linux/download/pubkey
+    fingerprint: 396060CADD8A75220BFCB369B903BF1861A7C71D
+
 - name: RedHat - Add 1Password repository
   yum_repository:
     file: 1Password
