all: vscode is sometimes flakey and unable to install extensions

--- a/tasks/user/ides.yml
+++ b/tasks/user/ides.yml
@@ -48,3 +48,4 @@
   until: vscode_extension_install is succeeded
   retries: 5
   delay: 5
+  ignore_errors: yes # VSCode marketplace is sometimes unreachable
